@@ -1,8 +1,7 @@
 package mcjty.rftoolsbuilder.modules.shield.filters;
 
+import mcjty.rftoolsbuilder.modules.shield.blocks.ShieldingBlock;
 import net.minecraft.entity.Entity;
-import net.minecraft.entity.monster.IMob;
-import net.minecraft.entity.passive.AnimalEntity;
 
 public class AnimalFilter extends AbstractShieldFilter {
 
@@ -10,7 +9,7 @@ public class AnimalFilter extends AbstractShieldFilter {
 
     @Override
     public boolean match(Entity entity) {
-        return entity instanceof AnimalEntity && !(entity instanceof IMob);
+        return ShieldingBlock.isPassive(entity);
     }
 
     @Override
